--- a/morningGlory.html
+++ b/morningGlory.html
@@ -4,6 +4,7 @@
 <meta lang="en">
 <meta name="viewport" content="width=device-width initial scale=1.0">
 <link rel="stylesheet" href="https://use.typekit.net/abf8xpt.css">
+<link rel="stylesheet" type="text/css" href="style.css(2)">
 <style type="text/css">
 html{
 	background-color:#DCDCDC;
